# nano-gemm

./: Cargo.toml  README.md  build.rs  justfile  main.cpp
benches/: bench.rs
nano-gemm/: Cargo.toml
nano-gemm-c32/: Cargo.toml  build.rs
nano-gemm-c32/src/: lib.rs
nano-gemm-c64/: Cargo.toml  build.rs
nano-gemm-c64/src/: lib.rs
nano-gemm-codegen/: Cargo.toml
nano-gemm-codegen/src/: lib.rs
nano-gemm-core/: Cargo.toml
nano-gemm-core/src/: lib.rs
nano-gemm-f32/: Cargo.toml  build.rs
nano-gemm-f32/src/: lib.rs
nano-gemm-f64/: Cargo.toml  build.rs
nano-gemm-f64/src/: lib.rs
nano-gemm/benches/: bench.rs
nano-gemm/src/: lib.rs
src/: lib.rs
