[package]
name = "nano-gemm-f32"
version = "0.2.0"
edition = "2021"
authors = ["sarah <>"]
description = "Small matrix multiplication"
readme = "../README.md"
repository = "https://github.com/sarah-ek/nano-gemm/"
license = "MIT"
keywords = ["math", "matrix"]

[dependencies]
nano-gemm-core = { version = "0.2", path = "../nano-gemm-core" }

[build-dependencies]
nano-gemm-codegen = { version = "0.2", path = "../nano-gemm-codegen" }

[features]
default = []
x86-v4 = []
