[package]
name = "nano-gemm"
version = "0.1.3"
edition = "2021"
description = "Small matrix multiplication"
readme = "../README.md"
repository = "https://github.com/sarah-ek/nano-gemm/"
license = "MIT"
keywords = ["math", "matrix"]

[dependencies]
equator = "0.2.2"
num-complex = { version = "0.4.5", default-features = false }
nano-gemm-core = { version = "0.1.0", path = "../nano-gemm-core" }
nano-gemm-f32 = { version = "0.1.0", default-features = false, path = "../nano-gemm-f32" }
nano-gemm-f64 = { version = "0.1.0", default-features = false, path = "../nano-gemm-f64" }
nano-gemm-c32 = { version = "0.1.0", default-features = false, path = "../nano-gemm-c32" }
nano-gemm-c64 = { version = "0.1.0", default-features = false, path = "../nano-gemm-c64" }

[dev-dependencies]
aligned-vec = "0.5.0"
itertools = "0.12.1"
nalgebra = "0.32.4"
intel-mkl-src = { version = "0.7.0" }
ndarray = { version = "0.15.6", features = ["blas"] }
rand = "0.8.5"
faer = { version = "0.17", features = ["nightly"] }
num-complex = { version = "0.4.5", features = ["rand"] }
diol = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
nano-gemm-codegen = { version = "0.1", path = "../nano-gemm-codegen" }

[features]
default = ["std"]
std = []
nightly = [
  "nano-gemm-f32/nightly",
  "nano-gemm-f64/nightly",
  "nano-gemm-c32/nightly",
  "nano-gemm-c64/nightly",
]

[[bench]]
name = "bench"
harness = false
